force-app/main/default/objects/patient__c/patient__c.object-meta.xml
<CustomObject>
    <description>covid infected patients</description>
    <label>patient</label>
    <nameField>
        <label>patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>