force-app/main/default/objects/patient__c/fields/cure_date__c.field-meta.xml
<CustomField>
    <fullName>cure_date__c</fullName>
    <description>Cured_date</description>
    <label>cure_date</label>
    <type>Date</type>
</CustomField>