force-app/main/default/objects/patient__c/fields/fatal_date__c.field-meta.xml
<CustomField>
    <fullName>fatal_date__c</fullName>
    <label>fatal_date</label>
    <type>Date</type>
</CustomField>