force-app/main/default/objects/patient__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <description>Hospital  where the patient is admitted</description>
    <label>Hospital</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>