force-app/main/default/objects/patient__c/fields/Infected_date__c.field-meta.xml
<CustomField>
    <fullName>Infected_date__c</fullName>
    <description>Infection date</description>
    <label>Infected_date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>