force-app/main/default/objects/patient__c/fields/patent_id__c.field-meta.xml
<CustomField>
    <fullName>patent_id__c</fullName>
    <label>patent_id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>